syntax = "proto3";

package types;

import "doc.proto";

message TermQuery {
    Keyword Keyword = 1;
    repeated TermQuery Must = 2;
    repeated TermQuery Should = 3;
}

// protoc -I=E:\Study\Golang\Trash\searchEngine\types --gogofaster_out=./types --proto_path=./types term_query.proto
// 在windows上-I需使用绝对路径